src/sass/main.scss
$font_path: '~@/assets/fonts/';
$img_path: '~@/assets/';

// General styles
@font-face {
  font-family: CamingoCode-Reg;
  src: url($font_path + 'CamingoCode-Regular.ttf');
}

@font-face {
  font-family: CamingoCode-Bold;
  src: url($font_path + 'CamingoCode-Bold.ttf');
}

@import '_colors';
@import "~bootstrap/scss/bootstrap";

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'CamingoCode-Reg', Arial, Helvetica, sans-serif;
}

html,
body,
#app {
  width: 100vw;
}

body {
  background-color: rgb(241, 241, 241);
}

main {
  padding: 0 5%;
  overflow-x: hidden;
}

h1,
h2,
h3,
h4 {
  margin-bottom: 50px;
  font-family: CamingoCode-Bold, Arial, Helvetica, sans-serif;
}

.banner {
    width: 100vw;
    height: 100vh;
    padding: 50px;

    align-items: center;
    position: relative;
}

section {

  padding: 50px 0;

  h1 {
    text-decoration: underline;
    text-align: center;
    color: $primary_color;
  }
}

hr {
  border-color: rgba($color: $primary_color, $alpha: 0.7);
}

nav {
  .logo {
    width: 50px;
  }


}

.navbar-light .navbar-nav .nav-link.active {
  color: $primary_color;
}

.navbar-light .navbar-nav .nav-link:hover {
  color: rgba($color: $primary_color, $alpha: 0.7);
}

@import 'home';
@import 'contact';
@import 'error404';
@import 'responsive';
@import 'animations';

